[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/sprites/logos/logo-godot-text.png" type="Texture" id=1]
[ext_resource path="res://resources/sprites/logos/logo-godot-robot.png" type="Texture" id=2]
[ext_resource path="res://scenes/Splash/Splash.gd" type="Script" id=3]
[ext_resource path="res://scenes/Transition/TransitionOut.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Transition/TransitionIn.tscn" type="PackedScene" id=5]

[node name="Splash" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 128.0 ],
"_edit_vertical_guides_": [ 240.0 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 480.0
margin_bottom = 272.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo-godot-robot" type="Sprite" parent="."]
position = Vector2( 240, 104 )
texture = ExtResource( 2 )

[node name="Logo-godot-text" type="Sprite" parent="."]
position = Vector2( 240, 144 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="TransitionIn" parent="." instance=ExtResource( 5 )]

[node name="TransitionOut" parent="." instance=ExtResource( 4 )]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
